// Vitest Snapshot v1

exports[`Input > Input addonVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input-adornment
    prepend="http://"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append=".com"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
  <t-input-adornment
    append=".com"
    prepend="http://"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-input-adornment>
</div>
`;

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 300px;"
>
  <t-input
    align="left"
    default-value="左对齐"
  />
  <t-input
    align="center"
    default-value="居中对齐"
  />
  <t-input
    align="right"
    default-value="右对齐"
  />
</div>
`;

exports[`Input > Input autoWidthVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    auto-width=""
    default-value="宽度自适应"
  />
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input />
  <t-input
    placeholder="请输入内容（有默认值）"
  />
  <t-input
    label="价格："
    suffix="元"
  />
</div>
`;

exports[`Input > Input clearableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    clearable=""
    placeholder="请输入"
  />
</div>
`;

exports[`Input > Input focusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    placeholder="请输入内容"
  />
</div>
`;

exports[`Input > Input formatVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    format="function () { [native code] }"
    placeholder="请输入数字"
    status=""
    tips=""
  />
</div>
`;

exports[`Input > Input groupVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div>
    <t-input-group
      separate=""
    >
      <t-input
        default-value="0731"
        style="width: 100px;"
      />
      <t-input
        default-value="12345677"
      />
    </t-input-group>
  </div>
  <div>
    <t-input-group
      separate=""
    >
      <t-input />
      <t-input />
    </t-input-group>
  </div>
  <div>
    <t-input-group>
      <t-input />
      <t-input />
    </t-input-group>
  </div>
  <div>
    <t-input-group
      separate=""
    >
      <t-input
        default-value="0731"
        style="width: 100px;"
      />
      <span
        style="line-height: 32px;"
      >
         - 
      </span>
      <t-input
        default-value="12345"
        style="width: 100px;"
      />
      <t-input
        default-value="678901"
        style="width: 100px;"
      />
      <t-input
        style="width: 100px;"
      />
    </t-input-group>
  </div>
</div>
`;

exports[`Input > Input maxLengthCountVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    maxlength="5"
    suffix="0/5"
  />
</div>
`;

exports[`Input > Input passwordVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    default-value="520 TDesign"
    type="password"
  >
    <svg
      class="t-icon t-icon-lock-on"
      fill="none"
      height="1em"
      slot="prefix-icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6 10v1h4v-1H6z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </t-input>
  <t-input
    default-value="520 TDesign"
    prefix-icon="function () { [native code] }"
    type="password"
  />
</div>
`;

exports[`Input > Input sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    placeholder="请输入内容"
    size="large"
  />
  <t-input
    placeholder="请输入内容"
  />
  <t-input
    placeholder="请输入内容"
    size="small"
  />
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <t-input
    default-value="禁用状态"
    disabled=""
  />
  <t-input
    default-value="只读状态"
    readonly=""
  />
  <br />
  <t-input
    default-value="成功状态"
  />
  <t-input
    default-value="成功状态"
    status="success"
  />
  <t-input
    default-value="警告状态"
    status="warning"
  />
  <t-input
    default-value="错误状态"
    status="error"
  />
  <br />
  <t-input
    default-value="普通状态"
    tips="这是普通文本提示"
  />
  <t-input
    default-value="成功状态"
    status="success"
    tips="校验通过文本提示"
  />
  <t-input
    default-value="警告状态"
    status="warning"
    tips="校验不通过文本提示"
  />
  <t-input
    default-value="错误状态"
    status="error"
    tips="校验存在严重问题文本提示"
  />
</div>
`;

exports[`Input > Input textareaVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <h5>
    文本域输入框已抽离为单独组件，更多示例请参考 Textarea 组件
  </h5>
  <t-textarea
    placeholder="请输入内容"
  />
</div>
`;
